# tinytensor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
docs/: autograd_custom.md  backend.md  dataloader.md  neural_net.md  rand.md  supported_ops.md  tensor.md
examples/: CMakeLists.txt  mlp_example.cpp  mnist_cnn_example.cpp  translation_example.cpp
include/tt/: autograd.h  concepts.h  device.h  exception.h  grad_mode.h  index.h  macros.h  print_options.h  random.h  scalar.h  shape.h  tensor.h  tinytensor.h  util.h
include/tt/data/: dataset.h  mnist.h
include/tt/jit/: Graph.h  OpNode.h  Ops.h
include/tt/nn/: activation.h  batchnorm.h  conv2d.h  dropout.h  embedding.h  gru.h  init.h  instancenorm.h  layernorm.h  linear.h  loss.h  lstm.h  module.h  module_list.h  nn.h  pool2d.h  rnn.h
include/tt/optim/: adagrad.h  adam.h  adamw.h  optim.h  optimizer.h  rmsprop.h  sgd.h
packaging/: CMakeLists.txt  tinytensorConfig.cmake
tests/: CMakeLists.txt  test_batchnorm.cpp  test_binary.cpp  test_binary_autograd.cpp  test_clamp.cpp  test_clamp_autograd.cpp  test_clone.cpp  test_concat.cpp  test_conv.cpp  test_conv_autograd.cpp  test_creation.cpp  test_distribution.cpp  test_grad_hook.cpp  test_grad_mode.cpp  test_gru.cpp  test_index.cpp  test_index_autograd.cpp  test_inplace_operator.cpp  test_instancenorm.cpp  test_joining_autograd.cpp  test_layernorm.cpp  test_loss.cpp  test_lstm.cpp  test_matmul.cpp  test_matmul_autograd.cpp  test_misc.cpp  test_misc_autograd.cpp  test_multi_device_cuda.cpp  test_optimizer.cpp  test_optimizer_save_load.cpp  test_reduce.cpp  test_reduce_autograd.cpp  test_retain_graph.cpp  test_rnn.cpp  test_save_load.cpp  test_shape.cpp  test_shape_autograd.cpp  test_to.cpp  test_to_autograd.cpp  test_to_vec.cpp  (+4 more)
tinytensor/: CMakeLists.txt
tinytensor/autograd/: CMakeLists.txt  backward.cpp  backward.h  binary_ops.cpp  binary_ops.h  clamp_ops.cpp  clamp_ops.h  conv_ops.cpp  conv_ops.h  dag.cpp  dag.h  index_ops.cpp  index_ops.h  joining_ops.cpp  joining_ops.h  misc_ops.cpp  misc_ops.h  reduce_ops.cpp  reduce_ops.h  shape_ops.cpp  shape_ops.h  unary_ops.cpp  unary_ops.h
tinytensor/common/: CMakeLists.txt  exception.cpp  print_options.cpp  scalar.cpp
tinytensor/data/: CMakeLists.txt  mnist.cpp
tinytensor/nn/: CMakeLists.txt  activation.cpp  batchnorm.cpp  conv2d.cpp  dropout.cpp  embedding.cpp  gru.cpp  init.cpp  instancenorm.cpp  layernorm.cpp  linear.cpp  loss.cpp  lstm.cpp  module.cpp  pool2d.cpp  rnn.cpp
tinytensor/optim/: CMakeLists.txt  adagrad.cpp  adam.cpp  adamw.cpp  optimizer.cpp  rmsprop.cpp  sgd.cpp
tinytensor/tensor/: CMakeLists.txt  backend_base.h  backend_register.cpp  backend_register.h  index.cpp  print.h  random.cpp  shape.cpp  storage_base.h  tensor.cpp
tinytensor/tensor/backend/common/: CMakeLists.txt  binary.h  dispatch.h  distribution.h  misc.h  reduce.h  span.h  unary.h  util.h
tinytensor/tensor/backend/common/kernel/: binary.hpp  cast.hpp  distribution.hpp  misc.hpp  reduce.hpp  unary.hpp
tinytensor/tensor/backend/cpu/: CMakeLists.txt  assign.cpp  assign.h  backend_cpu.cpp  backend_cpu.h  binary.cpp  binary.h  cast.cpp  cast.h  clamp.cpp  clamp.h  conv.cpp  conv.h  data_types.h  distribution.cpp  distribution.h  index.cpp  index.h  matmul.cpp  matmul.h  misc.cpp  misc.h  reduce.cpp  reduce.h  storage_cpu.h  unary.cpp  unary.h
tinytensor/tensor/backend/cpu/kernel/: assign.hpp  binary.hpp  clamp.hpp  conv.hpp  distribution.hpp  index.hpp  matmul.hpp  misc.hpp  reduce.hpp  simd.h  unary.hpp
tinytensor/tensor/backend/cuda/: CMakeLists.txt  assign.cu  assign.h  backend_cuda.cpp  backend_cuda.h  binary.cu  binary.h  cast.cu  cast.h  clamp.cu  clamp.h  config.cuh  conv.cu  conv.h  data_types.cu  data_types.cuh  distribution.cu  distribution.h  index.cu  index.h  kernel_launch.cuh  matmul.cu  matmul.h  misc.cu  misc.h  reduce.cu  reduce.h  storage_cuda.cu  storage_cuda.h  unary.cu  unary.h
tinytensor/tensor/backend/cuda/kernel/: assign.cuh  binary.cuh  clamp.cuh  conv.cuh  copy.cuh  distribution.cuh  index.cuh  init.cuh  matmul.cuh  misc.cuh  reduce.cuh  unary.cuh
tinytensor/tensor/backend/jit/: backend_jit.cpp  backend_jit.h  storage_jit.h
